# WrapSynth-ETHGlobal

./: .env.example  .gitmodules  README.md  SYNTHWRAP.md  deployment.base-sepolia.json  deployment.json  ephemeralBrowserWallet.md  hardhat.config.js  package-lock.json  package.json  test-gnosis.sh  test-vault-data.js  testCreLive.sh
.cre-test-deps/: package.json
contracts/: Create2Deployer.sol  Ed25519.sol  VaultManager.sol  WrappedMonero.sol  wsXMR.sol  wsXMRLiquidityRouter.sol
cre/: .env.example  .gitignore  README.md  project.yaml  secrets.yaml
deployments/: gnosis_latest.json
docs/: sequenceDiagrams.md
ethereum/: .gitignore  README.md  deployment.cre-test.json  deployment.demo-hub.json  foundry.toml  package.json  remappings.txt  test-fork.sh
frontend/: config.js  deployment.json  index.html  package.json  styles.css
lp-node/: .env.example  Cargo.toml  MONERO_INTEGRATION.md  PRODUCTION.md  README.md  config.toml  lp
lp-node/lp-node-db/: db  snap.000000000000043E  snap.0000000000000504  snap.00000000000005CA
lp-node/src/: api.rs  cli.rs  db.rs  events.rs  evm.rs  main.rs  monero.rs
lp-server/: .env.example  README.md  burnHandler.js  call_set_mint_ready.js  check_event_carefully.js  check_latest_mint.js  check_mint.js  check_mint_correct.js  check_mint_status.js  server.js  (+16 more)
solana/anchor-program/programs/wrapsynth-vault-manager/: Cargo.toml
solana/anchor-program/programs/wrapsynth-vault-manager/src/: constants.rs  errors.rs  lib.rs
solana/anchor-program/programs/wrapsynth-vault-manager/src/instructions/: buy_and_burn.rs  initialize.rs  mod.rs  reconciliation.rs  vault_management.rs
solana/anchor-program/programs/wrapsynth-vault-manager/src/state/: mint_request.rs
solana/anchor-program/programs/wrapsynth-vault-manager/src/utils/: ed25519_verify.rs  math.rs  mod.rs  oracle.rs
solana/programs/wsxmr_solana/: Cargo.toml
solana/programs/wsxmr_solana/src/: constants.rs  error.rs  lib.rs
solana/programs/wsxmr_solana/src/instructions/: cancel_burn.rs  cancel_mint.rs  claim_slashed_collateral.rs  commit_burn.rs  confirm_mint.rs  create_vault.rs  deposit_collateral.rs  finalize_burn.rs  finalize_mint.rs  harvest_yield.rs  initialize_global.rs  initiate_mint.rs  liquidate.rs  mod.rs  propose_burn.rs  request_burn.rs  set_vault_params.rs  withdraw_collateral.rs
solana/programs/wsxmr_solana/src/state/: burn_request.rs  global_state.rs  mint_request.rs  mod.rs  vault.rs
solana/programs/wsxmr_solana/src/utils/: crypto.rs  math.rs  mod.rs  oracle.rs
(+365 files in other folders)
