[package]
name = "wsxmr_solana"
version = "0.1.0"
description = "WrapSynth Monero Bridge on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "wsxmr_solana"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
k256 = { version = "0.13", default-features = false, features = ["ecdsa"] }
sha2 = { version = "0.10", default-features = false }
