[package]
name = "wrapsynth-vault-manager"
version = "0.1.0"
description = "WrapSynth Vault Manager - Solana port of VaultManager.sol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "wrapsynth_vault_manager"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["token_2022"] }
curve25519-dalek = { version = "4", default-features = false, features = ["alloc"] }
sha2 = { version = "0.10", default-features = false }
sha3 = { version = "0.10", default-features = false }
